pgrades to Java 25 with dependency/build updates, refactors system prompt endpoints to use current user, enhances signup to detect duplicate username/email, updates security matcher, and adds/updates tests and CI/Docker configs.